PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Add button to schedules page to allow skipping current trigger

Phoronix Test Suite 5.8-Belev
5 June 2015

- pts-core: Don't needlessly write out config file each time if nothing relevant has changed
- pts-core: Automatically re-install tests if compiler flag environment variables change
- pts-core: Add attr as an external dependency
- pts-core: Fix for reading multiple dependency names
- phoromatic: Reboot system if comm fails 10+ times on client
- phoromatic: Add global checkbox to key pages
- phoromatic: Track core version of clients in database
- phoromatic: Refresh OB repository lists prior to benchmarks
- phoromatic: Additional validation on result uploads
- phodevi: Some basic hardware reporting improvements that help the MIPS Creator CI20

Phoronix Test Suite 5.8 Milestone 5
28 May 2015

- pts-core: Major performance improvements when merging many result files
- pts-core: Faster result file parsing
- pts-core: Stress-run improvements
- phoromatic: Improved tracker page
- phoromatic: Updated maintenance page
- phoromatic: Log tick sensors into sensors-pool
- phoromatic: Show prominent sensors via the dashboard
- phoromatic: Add graphs to systems page
- phoromatic: Scale SVG result graphs to better page size
- phoromatic: Add phoromatic.export-results-for-account-schedules option
- phoromatic: Add the Phoromatic Export Viewer

Phoronix Test Suite 5.8 Milestone 4
20 May 2015

- pts-core: Support for using DNF directly when available on Fedora
- phodevi: Report kernel's build date when detected it's running on a daily/devel/RC kernel
- phodevi: Fix for Radeon GPU voltage reporting
- phodevi: Improved open-source GPU frequency detection when X Server not active
- phoromatic: Various fixes
- phoromatic: Add support for specifying custom client update script via account settings page to keep clients PTS updated
- phoromatic: Change interface of reporting sensor values
